--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           <ul class="logo-menu">
             <a href="index.html" class="logo">
               <!-- Logo White Version -->
-              <img class="logo-white" src="img/logo.svg" alt="">
+              <img class="logo-white" src="img/redwhitee.png" alt="">
               <!-- Logo Dark Version -->
-              <img class="logo-dark" src="img/logo-dark.svg" alt="">
+              <img class="logo-dark" src="img/redwhitee.png" alt="">
             </a>
           </ul>
           
