--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body class="size-1280">
     <!-- PREMIUM FEATURES BUTTON -->
-  	<a target="_blank" class="hide-s" href="../template/virtua-premium-responsive-business-template/" style="position:fixed;top:120px;right:-14px;z-index:10;"><img src="img/premium-features.png" alt=""></a>
+  <!--	<a target="_blank" class="hide-s" href="../template/virtua-premium-responsive-business-template/" style="position:fixed;top:120px;right:-14px;z-index:10;"><img src="img/premium-features.png" alt=""></a> -->
     <!-- HEADER -->
     <header role="banner" class="position-absolute">    
       <!-- Top Navigation -->
@@ -47,7 +47,7 @@
           <ul class="logo-menu">
             <a href="index.html" class="logo">
               <!-- Logo White Version -->
-              <img class="logo-white" src="img/redwhitee.png" alt="">
+            <!--  <img class="logo-white" src="img/redwhitee.png" alt=""> -->
               <!-- Logo Dark Version -->
               <img class="logo-dark" src="img/redwhitee.png" alt="">
             </a>
