--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="logo hide-l hide-xl hide-xxl">
            <a href="index.html" class="logo">
             <!-- Logo Dark Version -->
-            <img class="logo-dark" src="img/redwhitee.png" alt="">
+            <img class="logo-dark" src="img/logo.svg" alt="">
           </a>
         </div>
         
@@ -47,9 +47,9 @@
           <ul class="logo-menu">
             <a href="index.html" class="logo">
               <!-- Logo White Version -->
-            <!--  <img class="logo-white" src="img/redwhitee.png" alt=""> -->
+             <img class="logo-white" src="img/logo.svg" alt=""> 
               <!-- Logo Dark Version -->
-              <img class="logo-dark" src="img/redwhitee.png" alt="">
+              <img class="logo-dark" src="img/logo.svg" alt="">
             </a>
           </ul>
           
