--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="logo hide-l hide-xl hide-xxl">
            <a href="index.html" class="logo">
             <!-- Logo Dark Version -->
-            <img class="logo-dark" src="img/logo.svg" alt="">
+            <!--<img class="logo-dark" src="img/logo.svg" alt="">-->
           </a>
         </div>
         
