--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <ul class="logo-menu">
             <a href="index.html" class="logo">
               <!-- Logo White Version -->
-             <img class="logo-white" src="img/Cpt1.jpg" alt=""> 
+             <img class="logo-white" src="img/Cpt1.JPG" alt=""> 
               <!-- Logo Dark Version -->
              <!-- <img class="logo-dark" src="img/logo.svg" alt="">-->
             </a>
