--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Virtua - New Amazing HTML5 Template</title>
+    <title>Techno Care Innovations</title>
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/responsee.css">
@@ -28,7 +28,7 @@
         <div class="logo hide-l hide-xl hide-xxl">
            <a href="index.html" class="logo">
             <!-- Logo Dark Version -->
-            <img class="logo-dark" src="img/logo.svg" alt="">
+            <img class="logo-dark" src="img/TCI.jpeg" alt="">
           </a>
         </div>
         
