--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
       <!-- Header -->
       <header class="section-top-padding background-image text-center" style="background-image:url(img/img-05.jpg)">
         <h1 class="text-extra-thin text-white text-s-size-30 text-m-size-40 text-size-50 text-line-height-1 margin-bottom-40 margin-top-130">
-          Save your Time and Keep Calm
+          On-Site & Remote Managed IT Support
         </h1>
-        <p class="text-white">Duis autem vel eum iriure dolor in hendrerit in vulputate velit<br> esse molestie consequat, vel illum dolore eu feugiat nulla facilisis</p>
+        <p class="text-white">Techno Care Innovations provides top on-site IT support and managed services to Small and Medium businessess</p>
         <i class="slow icon-sli-arrow-down text-white margin-top-20 text-size-16"></i>
         <!-- Image -->
         <img class="margin-top-20 center" src="img/app.png" alt="">
@@ -107,7 +107,7 @@
       <section class="section-top-padding background-white">
         <div class="line text-center">
           <i class="icon-sli-heart text-primary text-size-40"></i>
-          <h2 class="text-dark text-size-50 text-m-size-40">Template <b>Features</b></h2>
+          <h2 class="text-dark text-size-50 text-m-size-40">Our  <b>Services</b></h2>
           <hr class="break background-primary break-small break-center margin-bottom-50">
         </div>
         <div class="line">
@@ -117,8 +117,8 @@
                 <i class="icon-sli-equalizer text-primary text-size-40 text-line-height-1"></i>
               </div>
               <div class="margin-left-60">
-                <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">Unlimited Color Variants</h3>
-                <p>Hendrerit in vulputate duis autem vel eum iriure dolor in velit esse molestie consequat, vel illum dolore nulla facilisis</p>
+                <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">Software Development</h3>
+                <p>TCI understands the growing requirements businesses face every day.Part of these requirements often times is the need for specialised software.</p>
                 <a class="text-more-info text-primary" href="/">Read more</a>                
               </div>
             </div>
@@ -127,9 +127,9 @@
                 <i class="icon-sli-layers text-primary text-size-40 text-line-height-1"></i>
               </div>
               <div class="margin-left-60">
-                <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">Many Reusable Elements</h3>
-                <p>Hendrerit in vulputate duis autem vel eum iriure dolor in velit esse molestie consequat, vel illum dolore nulla facilisis</p>
-                <a class="text-more-info text-primary" href="/">Read more</a>                
+                <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">Buisness Internet Services</h3>
+                <p>TCI offers a wide range of Internet services. With our diverse partners, we can offer nationwide coverage across multiple carriers. From dedicated fibre lines, to fixed wireless solutions</p>
+                <a class="text-more-info text-primary" href="#">Read more</a>                
               </div>
             </div>
             <div class="s-12 m-6 l-4 margin-bottom-60">
@@ -137,9 +137,9 @@
                 <i class="icon-sli-share text-primary text-size-40 text-line-height-1"></i>
               </div>
               <div class="margin-left-60">
-                <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">Clean Modern Code</h3>
-                <p>Hendrerit in vulputate duis autem vel eum iriure dolor in velit esse molestie consequat, vel illum dolore nulla facilisis</p>
-                <a class="text-more-info text-primary" href="/">Read more</a>                 
+                <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">Digital Marketing</h3>
+                <p>An engaging website with a properly targeted digital marketing campaign is the most basic requirement in order to engage new business from online source</p>
+                <a class="text-more-info text-primary" href="#">Read more</a>                 
               </div>
             </div>
             <div class="s-12 m-6 l-4 margin-m-bottom-60">
@@ -147,9 +147,9 @@
                 <i class="icon-sli-paper-plane text-primary text-size-40 text-line-height-1"></i>
               </div>
               <div class="margin-left-60">
-                <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">Parallax Background</h3>
-                <p>Hendrerit in vulputate duis autem vel eum iriure dolor in velit esse molestie consequat, vel illum dolore nulla facilisis</p>
-                <a class="text-more-info text-primary" href="/">Read more</a>                 
+                <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">IT Consulting</h3>
+                <p>IT-Solutions management consulting services help businesses align their business process with their ever-changing IT infrastructure as per your IT needs.</p>
+                <a class="text-more-info text-primary" href="#">Read more</a>                 
               </div>
             </div>
             <div class="s-12 m-6 l-4 margin-m-bottom-60">
@@ -157,8 +157,8 @@
                 <i class="icon-sli-diamond text-primary text-size-40 text-line-height-1"></i>
               </div>
               <div class="margin-left-60">
-                <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">Responsive Layoute</h3>
-                <p>Hendrerit in vulputate duis autem vel eum iriure dolor in velit esse molestie consequat, vel illum dolore nulla facilisis</p>
+                <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">Buisness Voice Services</h3>
+                <p>Many businesses are seeking a cost-effective and flexible way to migrate to IP-based phone services. With a SIP Trunking platform we enable customers to benefit from lowered cost.</p>
                 <a class="text-more-info text-primary" href="/">Read more</a>                 
               </div>
             </div>
@@ -167,8 +167,8 @@
                 <i class="icon-sli-rocket text-primary text-size-40 text-line-height-1"></i>
               </div>
               <div class="margin-left-60">
-                <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">And many more...</h3>
-                <p>Hendrerit in vulputate duis autem vel eum iriure dolor in velit esse molestie consequat, vel illum dolore nulla facilisis</p>
+                <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">Cloud hosted Services</h3>
+                <p>Access your Hosted Exchange mailbox from your desktop mail client and your mobile device</p>
                 <a class="text-more-info text-primary" href="/">Read more</a>                 
               </div>
             </div>
