--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               </div>
               <div class="margin-left-60">
                 <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">Software Development</h3>
-                <p>TCI understands the growing requirements businesses face every day.Part of these requirements often times is the need for specialised software.</p>
+                <p>TCI understands the growing requirements businesses face every day. Part of these requirements oftentimes is the need for specialised software.</p>
                 <a class="text-more-info text-primary" href="/">Read more</a>                
               </div>
             </div>
@@ -128,7 +128,7 @@
               </div>
               <div class="margin-left-60">
                 <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">Buisness Internet Services</h3>
-                <p>TCI offers a wide range of Internet services. With our diverse partners, we can offer nationwide coverage across multiple carriers. From dedicated fibre lines, to fixed wireless solutions</p>
+                <p>TCI offers a wide range of Internet services. We can offer nationwide coverage across multiple carriers.</p>
                 <a class="text-more-info text-primary" href="#">Read more</a>                
               </div>
             </div>
@@ -138,7 +138,7 @@
               </div>
               <div class="margin-left-60">
                 <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">Digital Marketing</h3>
-                <p>An engaging website with a properly targeted digital marketing campaign is the most basic requirement in order to engage new business from online source</p>
+                <p>An engaging website with a properly targeted digital marketing campaign in order to engage new business from online source</p>
                 <a class="text-more-info text-primary" href="#">Read more</a>                 
               </div>
             </div>
