--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
               </div>
               <div class="margin-left-60">
                 <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">IT Consulting</h3>
-                <p>IT-Solutions management consulting services help businesses align their business process with their ever-changing IT infrastructure as per your IT needs.</p>
+                <p>IT-Solutions management consulting services help businesses to change IT infrastructure as per your IT needs.</p>
                 <a class="text-more-info text-primary" href="#">Read more</a>                 
               </div>
             </div>
@@ -158,7 +158,7 @@
               </div>
               <div class="margin-left-60">
                 <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">Buisness Voice Services</h3>
-                <p>Many businesses are seeking a cost-effective and flexible way to migrate to IP-based phone services. With a SIP Trunking platform we enable customers to benefit from lowered cost.</p>
+                <p> Many businesses are seeking a cost-effective way to migrate. We enable customers to benefit from lowered cost.</p>
                 <a class="text-more-info text-primary" href="/">Read more</a>                 
               </div>
             </div>
