--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               </div>
               <div class="margin-left-60">
                 <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">Software Development</h3>
-                <p>TCI understands the growing requirements businesses face every day. Part of these requirements oftentimes is the need for specialised software.</p>
+                <p>TCI understands the businesses faces every day. Part of these requirements is the need for specialised software.</p>
                 <a class="text-more-info text-primary" href="/">Read more</a>                
               </div>
             </div>
