--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
       <!-- Section 3 -->
       <section class="section background-white">      
         <div class="line text-center">
-          <p class="text-primary text-size-20">Lorem ipsum dolor sit amet</p>
-          <h2 class="text-dark text-size-50 text-m-size-40">Responsive <b>Components</b></h2>
+          <p class="text-primary text-size-20"></p>
+          <h2 class="text-dark text-size-50 text-m-size-40">On-Site & Remote  <b>IT Support Packages</b></h2>
           <i class="icon-chevron_down text-primary margin-bottom-50 text-size-20"></i> 
         </div> 
         
@@ -244,7 +244,7 @@
           </div>                                                                                              
         </div>       
       </section>
-      
+      <!--
       <!-- Section 4 -->
       <section class="background-primary full-width">        
         <div class="m-12 l-6 xl-5 xxl-4">
@@ -334,6 +334,7 @@
         <a href="/"><i class="icon-instagram_circle text-size-25 text-dark"></i></a> 
         <a href="/"><i class="icon-linked_in_circle text-size-25 text-dark"></i></a>                                                                       
       </div>
+      -->
       <!-- Main Footer -->
       <section class="section background-dark">
         <div class="line"> 
