--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
             <div class="s-12 m-6 l-3 xl-5">
                <h4 class="text-white text-strong">Our Mission</h4>
                <p>
-                 <b class="text-size-20">To enable people and businesses </b>  <b class="text-size-20">throughout the world to realize </b>their full potential.
+                 <b class="text-size-20">To enable people and businesses </b>  <b class="text-size-20">throughout the world to realize their full potential.</b>
                </p>
             </div>
             <div class="s-12 m-6 l-3 xl-2">
