--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
         <div class="line">
           <div class="m-10 l-6 xl-4 center">
             <div class="margin">
-              <a class="s-12 m-6 margin-s-bottom" href="/">
+              <a class="s-12 m-6 margin-s-bottom" href="#">
                 <img class="full-img right" src="img/google-play.svg" alt="">
               </a>
-              <a class="s-12 m-6" href="/">
+              <a class="s-12 m-6" href="#">
                 <img class="full-img" src="img/app-store.svg" alt="">
               </a>
             </div>
