--- a/contact.html
+++ b/contact.html
@@ -191,33 +191,33 @@
         <a href="/"><i class="icon-instagram_circle text-size-25 text-dark"></i></a> 
         <a href="/"><i class="icon-linked_in_circle text-size-25 text-dark"></i></a>                                                                       
       </div>
-      <!-- Main Footer -->
+       <!-- Main Footer -->
       <section class="section background-dark">
         <div class="line"> 
           <div class="margin2x">
             <div class="s-12 m-6 l-3 xl-5">
                <h4 class="text-white text-strong">Our Mission</h4>
                <p>
-                 <b class="text-size-20">Veri fastidii consectetuer</b> ius in, eum alii dicunt omnium eu. Wisi nostrud equidem ut usu. <b class="text-size-20">Deleniti pertinacia eu est</b>, te his soluta quaestio pericula.
+                 <b class="text-size-20">To enable people and businesses </b>  <b class="text-size-20">throughout the world to realize their full potential.</b>
                </p>
             </div>
             <div class="s-12 m-6 l-3 xl-2">
                <h4 class="text-white text-strong margin-m-top-30">Useful Links</h4>
-               <a class="text-primary-hover" href="page.html">FAQ</a><br>      
+               <a class="text-primary-hover" href="#">FAQ</a><br>      
                <a class="text-primary-hover" href="contact.html">Contact Us</a><br>
-               <a class="text-primary-hover" href="blog.html">Blog</a>
+               <a class="text-primary-hover" href="#">Blog</a>
             </div>
             <div class="s-12 m-6 l-3 xl-2">
                <h4 class="text-white text-strong margin-m-top-30">Term of Use</h4>
-               <a class="text-primary-hover" href="page.html">Terms and Conditions</a><br>
-               <a class="text-primary-hover" href="page.html">Refund Policy</a><br>
-               <a class="text-primary-hover" href="page.html">Disclaimer</a>
+               <a class="text-primary-hover" href="#">Terms and Conditions</a><br>
+               <a class="text-primary-hover" href="#">Refund Policy</a><br>
+               <a class="text-primary-hover" href="#">Disclaimer</a>
             </div>
             <div class="s-12 m-6 l-3 xl-3">
                <h4 class="text-white text-strong margin-m-top-30">Contact Us</h4>
-                <p><i class="icon-sli-screen-smartphone text-primary"></i> 0800 4521 800 50</p>
-                <a class="text-primary-hover" href="mailto:contact@sampledomain.com"><i class="icon-sli-mouse text-primary"></i> contact@sampledomain.com</a><br>
-                <a class="text-primary-hover" href="mailto:office@sampledomain.com"><i class="icon-sli-mouse text-primary"></i> office@sampledomain.com</a>
+                <p><i class="icon-sli-screen-smartphone text-primary"></i> +91.xxx.xxx.xxx</p>
+                <a class="text-primary-hover" href="mailto:info@technocareinnovations.in"><i class="icon-sli-mouse text-primary"></i> info@technocareinnovations.in</a><br>
+               <!-- <a class="text-primary-hover" href="mailto:office@sampledomain.com"><i class="icon-sli-mouse text-primary"></i> office@sampledomain.com</a> -->
             </div>
           </div>  
         </div>    
@@ -231,11 +231,11 @@
       <section class="padding-2x background-dark full-width">
         <div class="line">
           <div class="s-12 l-6">
-            <p class="text-size-12">Copyright 2019, Vision Design - graphic zoo</p>
-            <p class="text-size-12">All images have been purchased from Bigstock. Do not use the images in your website.</p>
+            <p class="text-size-12">Copyright 2016, Techno care Innovations</p>
+           <!-- <p class="text-size-12">All images have been purchased from Bigstock. Do not use the images in your website.</p> -->
           </div>
           <div class="s-12 l-6">
-            <a class="right text-size-12 text-primary-hover" href="http://www.myresponsee.com" title="Responsee - lightweight responsive framework">Design and coding<br> by Responsee Team</a>
+           <!-- <a class="right text-size-12 text-primary-hover" href="http://www.myresponsee.com" title="Responsee - lightweight responsive framework">Design and coding<br> by Responsee Team</a> -->
           </div>
         </div>  
       </section>
