--- a/services.html
+++ b/services.html
@@ -109,7 +109,7 @@
                   <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">HelpDesk & IT Support</h3>
                   <p>
                     We set the bar for IT service excellence by making client success our #1 priority.
-If you're like most businesses, you rely on your computer systems to keep things running smoothly. And when something goes wrong - whether it's a simple software issue or a more serious hardware failure - you need help getting it fixed as quickly as possible.
+When something goes wrong - whether it's a simple software issue or a more serious hardware failure - you need help getting it fixed as quickly as possible.
                     
                     <p class="text-padding-small background-primary text-white s-12 margin-top-bottom-20">Designs Managed IT Support</p>                    
                      
