--- a/services.html
+++ b/services.html
@@ -135,7 +135,7 @@ When something goes wrong - whether it's a simple software issue or a more serio
                 <div class="float-left">
                   <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">Cloud Desktop</h3>
                   <p>
-                    Evolving business demands are changing how people work. Yesterday’s model with employees working at the office on corporate devices has undergone a dramatic transformation. People expect to be able to work from anywhere using a variety of devices. Let NetFusion Designs help you enhance user experience.
+                    Evolving business demands are changing how people work. Yesterday’s model with employees working at the office on corporate devices has undergone a dramatic transformation. 
                     
                     <p class="text-padding-small background-dark text-white s-12 margin-top-bottom-20">Maintain peak productivity with Cloud</p>                    
                      
