--- a/services.html
+++ b/services.html
@@ -56,12 +56,12 @@
           <!-- right menu items -->
           <div class="top-nav right-menu">
              <ul class="top-ul chevron">
-                <li>
+              <!--  <li>
                   <a>Products</a>
                   <ul>
                     <li><a>Product 1</a></li>
                     <li><a>Product 2</a></li>
-                  </ul>
+                  </ul> -->
                 </li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -187,8 +187,8 @@ When something goes wrong - whether it's a simple software issue or a more serio
       <section class="section-small-padding background-white text-center">
         <div class="line">
           <div class="s-12 m-12 l-9 center margin-bottom-30">
-            <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-10">Prompta reform conceptam</h3>
-            <p>Deleniti pertinacia eu est, te his soluta quaestio pericula illum facilisis.</p>
+            <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-10">Need Our Services...</h3>
+            <p></p>
           </div>
         </div>            
         <div class="line">  
