--- a/services.html
+++ b/services.html
@@ -56,9 +56,9 @@
           <!-- right menu items -->
           <div class="top-nav right-menu">
              <ul class="top-ul chevron">
-              <!--  <li>
-                  <a>Products</a>
-                  <ul>
+                <li>
+                  <a>Blog</a>
+                 <!-- <ul>
                     <li><a>Product 1</a></li>
                     <li><a>Product 2</a></li>
                   </ul> -->
