--- a/about-us.html
+++ b/about-us.html
@@ -57,11 +57,11 @@
           <div class="top-nav right-menu">
              <ul class="top-ul chevron">
                 <li>
-                  <a>Products</a>
+                  <a>Blog</a>
                   <ul>
-                    <li><a>Product 1</a></li>
+                   <!-- <li><a>Product 1</a></li>
                     <li><a>Product 2</a></li>
-                  </ul>
+                  </ul> -->
                 </li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
