--- a/about-us.html
+++ b/about-us.html
@@ -63,7 +63,7 @@
                     <li><a>Product 2</a></li>
                   </ul> -->
                 </li>
-                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="gallery.html">Industries</a></li>
                 <li><a href="contact.html">Contact</a></li>
              </ul> 
           </div>
