--- a/gallery.html
+++ b/gallery.html
@@ -164,7 +164,7 @@
             </div>
             <div class="s-12 m-6 l-3 xl-3">
                <h4 class="text-white text-strong margin-m-top-30">Contact Us</h4>
-                <p><i class="icon-sli-screen-smartphone text-primary"></i> +91.xxx.xxx.xxx</p>
+                <p><i class="icon-sli-screen-smartphone text-primary"></i> +91 8891 892 352</p>
                 <a class="text-primary-hover" href="mailto:info@technocareinnovations.in"><i class="icon-sli-mouse text-primary"></i> info@technocareinnovations.in</a><br>
                <!-- <a class="text-primary-hover" href="mailto:office@sampledomain.com"><i class="icon-sli-mouse text-primary"></i> office@sampledomain.com</a> -->
             </div>
