--- a/about-us.html
+++ b/about-us.html
@@ -58,8 +58,8 @@
              <ul class="top-ul chevron">
                 <li>
                   <a>Blog</a>
-                  <ul>
-                   <!-- <li><a>Product 1</a></li>
+                 <!-- <ul>
+                    <li><a>Product 1</a></li>
                     <li><a>Product 2</a></li>
                   </ul> -->
                 </li>
