--- a/contact.html
+++ b/contact.html
@@ -125,9 +125,9 @@
                   <div class="float-left">
                     <i class="icon-sli-earphones-alt text-primary text-size-40 text-line-height-1"></i>
                   </div>
-                  <div class="margin-left-60">
-                    <h2 class="text-size-20 margin-bottom-10 text-strong">Phone Numbers</h2>                
-                    <p>+91 8891 892 352</p>
+                 <!--  <div class="margin-left-60">
+                   <h2 class="text-size-20 margin-bottom-10 text-strong">Phone Numbers</h2>                
+                    <p>+91 8891 892 352</p> -->
                                  
                   </div>
                 </div>
