--- a/Industries.html
+++ b/Industries.html
@@ -90,7 +90,7 @@
             <div class="margin2x">
                         
               <div class="s-12 m-6 margin-bottom-30">
-                <img class="full-img" src="img/portfolio/portfolio-01.jpg" alt=""/>
+                <img class="full-img" src="img/portfolio/helpdesk-com.png" alt=""/>
               </div>
               <div class="s-12 m-6 margin-bottom-30">
                 <img class="full-img" src="img/portfolio/portfolio-02.jpg" alt=""/>
