--- a/gallery.html
+++ b/gallery.html
@@ -93,19 +93,19 @@
                 <img class="full-img" src="img/portfolio/helpdesk-com.png" alt=""/>
               </div>
               <div class="s-12 m-6 margin-bottom-30">
-                <img class="full-img" src="img/portfolio/portfolio-02.jpg" alt=""/>
+                <img class="full-img" src="img/portfolio/img2.jpg" alt=""/>
               </div> 
               <div class="s-12 m-6 margin-bottom-30">
-                <img class="full-img" src="img/portfolio/portfolio-03.jpg" alt=""/>
+                <img class="full-img" src="img/portfolio/img3.jpg" alt=""/>
               </div> 
               <div class="s-12 m-6 margin-bottom-30">
-                <img class="full-img" src="img/portfolio/portfolio-04.jpg" alt=""/>
+                <img class="full-img" src="img/portfolio/img4.jpg" alt=""/>
               </div> 
               <div class="s-12 m-6 margin-bottom-30">
-                <img class="full-img" src="img/portfolio/portfolio-05.jpg" alt=""/>
+                <img class="full-img" src="img/portfolio/img5.jpg" alt=""/>
               </div> 
               <div class="s-12 m-6 margin-bottom-30">
-                <img class="full-img" src="img/portfolio/portfolio-06.jpg" alt=""/>
+                <img class="full-img" src="img/portfolio/img6.jpg" alt=""/>
               </div>                                                                                   
               
             </div>
