--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,7 @@
             </div>
           </div>
           <div class="m-12 l-6">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1459734.5702753505!2d16.91089086619977!3d48.577103681657675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ssk!2ssk!4v1457640551761" width="100%" height="600" frameborder="0" style="border:0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3946.108552429278!2d76.94734637447776!3d8.488825491552475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05bba5ccd3cc13%3A0x215811f0138cabb8!2sTechno%20Care%20Innovations!5e0!3m2!1sen!2sca!4v1686533991348!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </section>
         
