--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,7 @@
             </div>
           </div>
           <div class="m-12 l-6">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3946.108552429278!2d76.94734637447776!3d8.488825491552475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05bba5ccd3cc13%3A0x215811f0138cabb8!2sTechno%20Care%20Innovations!5e0!3m2!1sen!2sca!4v1686533991348!5m2!1sen!2sca" width="700" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3946.108552429278!2d76.94734637447776!3d8.488825491552475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05bba5ccd3cc13%3A0x215811f0138cabb8!2sTechno%20Care%20Innovations!5e0!3m2!1sen!2sca!4v1686533991348!5m2!1sen!2sca" width="750" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </section>
         
@@ -173,7 +173,7 @@
                 <div class="s-12">
                   <textarea name="message" class="required message" placeholder="Your message" rows="3"></textarea>
                 </div>
-                <div class="s-12"><button class="button border-radius text-white background-primary" type="submit"  href="#">Submit Button</button></div>
+                <div class="s-12"><button class="button border-radius text-white background-primary" type="submit"  href="contact.html">Submit Button</button></div>
               </div>    
             </form>
           </div>           
