--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Techno Care Innovations</title>
+    <title>Definition IT </title>
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/responsee.css">
@@ -366,8 +366,8 @@
             </div>
             <div class="s-12 m-6 l-3 xl-3">
                <h4 class="text-white text-strong margin-m-top-30">Contact Us</h4>
-                <p><i class="icon-sli-screen-smartphone text-primary"></i> +91 8891 892 352 </p>
-                <a class="text-primary-hover" href="mailto:info@technocareinnovations.in"><i class="icon-sli-mouse text-primary"></i> info@technocareinnovations.in</a><br>
+                <p><i class="icon-sli-screen-smartphone text-primary"></i> +91 6478049193 </p>
+                <a class="text-primary-hover" href="mailto:info@technocareinnovations.in"><i class="icon-sli-mouse text-primary"></i> info@definitionit.com</a><br>
                <!-- <a class="text-primary-hover" href="mailto:office@sampledomain.com"><i class="icon-sli-mouse text-primary"></i> office@sampledomain.com</a> -->
             </div>
           </div>  
@@ -382,7 +382,7 @@
       <section class="padding-2x background-dark full-width">
         <div class="line">
           <div class="s-12 l-6">
-            <p class="text-size-12">Copyright 2016, Techno care Innovations</p>
+            <p class="text-size-12">Copyright 2016, DefinitionIT </p>
            <!-- <p class="text-size-12">All images have been purchased from Bigstock. Do not use the images in your website.</p> -->
           </div>
           <div class="s-12 l-6">
