--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h1 class="text-extra-thin text-white text-s-size-30 text-m-size-40 text-size-50 text-line-height-1 margin-bottom-40 margin-top-130">
           On-Site & Remote Managed IT Support
         </h1>
-        <p class="text-white">Techno Care Innovations provides top on-site IT support and managed services to Small and Medium businessess</p>
+        <p class="text-white">Definition IT provides top on-site IT support and managed services to Small and Medium businessess</p>
         <i class="slow icon-sli-arrow-down text-white margin-top-20 text-size-16"></i>
         <!-- Image -->
         <img class="margin-top-20 center" src="img/app.png" alt="">
@@ -118,7 +118,7 @@
               </div>
               <div class="margin-left-60">
                 <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">Software Development</h3>
-                <p>TCI understands the businesses faces every day. Part of these requirements is the need for specialised software.</p>
+                <p>Defintion IT  understands the businesses faces every day. Part of these requirements is the need for specialised software.</p>
                 <a class="text-more-info text-primary" href="/">Read more</a>                
               </div>
             </div>
@@ -128,7 +128,7 @@
               </div>
               <div class="margin-left-60">
                 <h3 class="text-strong text-size-20 text-line-height-1 margin-bottom-20">Buisness Internet Services</h3>
-                <p>TCI offers a wide range of Internet services. We can offer nationwide coverage across multiple carriers.</p>
+                <p>Definiton IT  offers a wide range of Internet services. We can offer nationwide coverage across multiple carriers.</p>
                 <a class="text-more-info text-primary" href="#">Read more</a>                
               </div>
             </div>
