--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           <ul class="logo-menu">
             <a href="index.html" class="logo">
               <!-- Logo White Version -->
-             <img class="logo-white" src="img/tcnew.png" alt=""> 
+             <img class="logo-white" src="img/logo.png" alt=""> 
               <!-- Logo Dark Version -->
-             <!-- <img class="logo-dark" src="img/tcnew.png" alt="">-->
+             <!-- <img class="logo-dark" src="img/logo.png" alt="">-->
             </a>
           </ul>
           
