--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="logo hide-l hide-xl hide-xxl">
            <a href="index.html" class="logo">
             <!-- Logo Dark Version -->
-            <img class="logo-dark" src="img/logo.png" alt="">
+            <img class="logo-dark" src="img/deflogo.jpg" alt="">
           </a>
         </div>
         
@@ -47,9 +47,9 @@
           <ul class="logo-menu">
             <a href="index.html" class="logo">
               <!-- Logo White Version -->
-             <img class="logo-white" src="img/logo.png" alt=""> 
+             <img class="logo-white" src="img/deflogo.jpg" alt=""> 
               <!-- Logo Dark Version -->
-             <!-- <img class="logo-dark" src="img/logo.png" alt="">-->
+             <!-- <img class="logo-dark" src="img/deflogo.jpg" alt="">-->
             </a>
           </ul>
           
@@ -382,7 +382,7 @@
       <section class="padding-2x background-dark full-width">
         <div class="line">
           <div class="s-12 l-6">
-            <p class="text-size-12">Copyright 2016, DefinitionIT </p>
+            <p class="text-size-12">Copyright 2022, DefinitionIT </p>
            <!-- <p class="text-size-12">All images have been purchased from Bigstock. Do not use the images in your website.</p> -->
           </div>
           <div class="s-12 l-6">
