--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Techno Care Innovations</title>
+    <title>Definition IT</title>
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/responsee.css">
@@ -28,7 +28,7 @@
         <div class="logo hide-l hide-xl hide-xxl">
            <a href="index.html" class="logo">
             <!-- Logo Dark Version -->
-            <img class="logo-dark" src="img/tcnew.png" alt="">
+            <img class="logo-dark" src="img/deflogo.jpg" alt="">
           </a>
         </div>
         
@@ -47,9 +47,9 @@
           <ul class="logo-menu">
             <a href="index.html" class="logo">
               <!-- Logo White Version -->
-              <img class="logo-white" src="img/tcnew.png" alt="">
+              <img class="logo-white" src="img/deflogo.jpg" alt="">
               <!-- Logo Dark Version -->
-              <img class="logo-dark" src="img/tcnew.png" alt="">
+              <img class="logo-dark" src="img/deflogo.jpg" alt="">
             </a>
           </ul>
           
@@ -233,8 +233,8 @@ When something goes wrong - whether it's a simple software issue or a more serio
             </div>
             <div class="s-12 m-6 l-3 xl-3">
                <h4 class="text-white text-strong margin-m-top-30">Contact Us</h4>
-                <p><i class="icon-sli-screen-smartphone text-primary"></i> +91 8891 892 352</p>
-                <a class="text-primary-hover" href="mailto:info@technocareinnovations.in"><i class="icon-sli-mouse text-primary"></i> info@technocareinnovations.in</a><br>
+                <p><i class="icon-sli-screen-smartphone text-primary"></i> +1 6478049193</p>
+                <a class="text-primary-hover" href="mailto:info@technocareinnovations.in"><i class="icon-sli-mouse text-primary"></i> info@definitionit.com</a><br>
                <!-- <a class="text-primary-hover" href="mailto:office@sampledomain.com"><i class="icon-sli-mouse text-primary"></i> office@sampledomain.com</a> -->
             </div>
           </div>  
@@ -249,7 +249,7 @@ When something goes wrong - whether it's a simple software issue or a more serio
       <section class="padding-2x background-dark full-width">
         <div class="line">
           <div class="s-12 l-6">
-            <p class="text-size-12">Copyright 2016, Techno care Innovations</p>
+            <p class="text-size-12">Copyright 2022, DefinitionIT</p>
            <!-- <p class="text-size-12">All images have been purchased from Bigstock. Do not use the images in your website.</p> -->
           </div>
           <div class="s-12 l-6">
