--- a/contact.html
+++ b/contact.html
@@ -169,7 +169,7 @@
                 <div class="s-12">
                   <textarea name="message" class="required message" placeholder="Your message" rows="3"></textarea>
                 </div>
-                <div class="s-12"><button class="button border-radius text-white background-primary" type="submit"  href="contact.html">Submit Button</button></div>
+                <div class="s-12"><button class="button border-radius text-white background-primary" type="submit"  href="#">Submit Button</button></div>
               </div>    
             </form>
           </div>           
