--- a/services.html
+++ b/services.html
@@ -233,7 +233,7 @@ When something goes wrong - whether it's a simple software issue or a more serio
             </div>
             <div class="s-12 m-6 l-3 xl-3">
                <h4 class="text-white text-strong margin-m-top-30">Contact Us</h4>
-                <p><i class="icon-sli-screen-smartphone text-primary"></i> +1 6478049193</p>
+                <p><i class="icon-sli-screen-smartphone text-primary"></i> </p>
                 <a class="text-primary-hover" href="mailto:info@technocareinnovations.in"><i class="icon-sli-mouse text-primary"></i> info@definitionit.com</a><br>
                <!-- <a class="text-primary-hover" href="mailto:office@sampledomain.com"><i class="icon-sli-mouse text-primary"></i> office@sampledomain.com</a> -->
             </div>
