--- a/about-us.html
+++ b/about-us.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Definition IT </title>
+    <title>Techno care Innovations  </title>
     <link rel="stylesheet" href="css/components.css">
     <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/responsee.css">
@@ -28,7 +28,7 @@
         <div class="logo hide-l hide-xl hide-xxl">
            <a href="index.html" class="logo">
             <!-- Logo Dark Version -->
-            <img class="logo-dark" src="img/deflogo.jpg" alt="">
+            <img class="logo-dark" src="img/TCI.jpeg" alt="">
           </a>
         </div>
         
@@ -47,9 +47,9 @@
           <ul class="logo-menu">
             <a href="index.html" class="logo">
               <!-- Logo White Version -->
-              <img class="logo-white" src="img/deflogo.jpg" alt="">
+              <img class="logo-white" src="img/TCI.jpeg" alt="">
               <!-- Logo Dark Version -->
-              <img class="logo-dark" src="img/deflogo.jpg" alt="">
+              <img class="logo-dark" src="img/TCI.jpeg" alt="">
             </a>
           </ul>
           
