--- a/about-us.html
+++ b/about-us.html
@@ -148,7 +148,7 @@
             <div class="s-12 m-6 l-3 xl-3">
                <h4 class="text-white text-strong margin-m-top-30">Contact Us</h4>
                 <p><i class="icon-sli-screen-smartphone text-primary"></i> </p>
-                <a class="text-primary-hover" href="mailto: info@definitionit.com"><i class="icon-sli-mouse text-primary"></i> info@definitionit.com</a><br>
+                <a class="text-primary-hover" href="mailto: info@definitionit.com"><i class="icon-sli-mouse text-primary"></i> info@technocareinnovations.in</a><br>
                <!-- <a class="text-primary-hover" href="mailto:office@sampledomain.com"><i class="icon-sli-mouse text-primary"></i> office@sampledomain.com</a> -->
             </div>
           </div>  
@@ -163,7 +163,7 @@
       <section class="padding-2x background-dark full-width">
         <div class="line">
           <div class="s-12 l-6">
-            <p class="text-size-12">Copyright 2022, DefinitionIT</p>
+            <p class="text-size-12">Copyright 2022, Techno Care Innovations</p>
            <!-- <p class="text-size-12">All images have been purchased from Bigstock. Do not use the images in your website.</p> -->
           </div>
           <div class="s-12 l-6">
