--- a/contact.html
+++ b/contact.html
@@ -105,8 +105,8 @@
                   </div>
                   <div class="margin-left-60">
                     <h2 class="text-size-20 margin-bottom-10 text-strong">Company Address</h2>                
-                    <p>#503950 Potage Parkway </p>
-                    <p>Concord, Ontario,L4k 0J7.</p>             
+                    <p>No. 24 Level-2 S.S Kovil Road </p>
+                    <p>Trivandrum, Kerala- 695001</p>             
                   </div>
                 </div>
                 
@@ -127,7 +127,7 @@
                   </div>
                   <div class="margin-left-60">
                    <h2 class="text-size-20 margin-bottom-10 text-strong">Phone Numbers</h2>                
-                    <p>+1 (647)-804-9193</p> -->
+                    <p></p> -->
                                  
                   </div>
                 </div>
@@ -138,15 +138,15 @@
                   </div>
                   <div class="margin-left-60">
                     <h2 class="text-size-20 margin-bottom-10 text-strong">Billing information</h2>
-                    <p>#503,950 Potage Parkway </p>
-                    <p>Concord, Ontario,L4k 0J7.</p>                 
+                     <p>No. 24 Level-2 S.S Kovil Road </p>
+                    <p>Trivandrum, Kerala- 695001</p>                   
                   </div>
                 </div>
               </div>
             </div>
           </div>
           <div class="m-12 l-6">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11519.218668856987!2d-79.5282329!3d43.7976661!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b2f5886a492c9%3A0x8ed37b2ef0e6e11c!2sDefinitionIT!5e0!3m2!1sen!2sca!4v1696624077761!5m2!1sen!2sca" width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2790.3080209505324!2d76.94914243305355!3d8.490489443716454!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05bba5681f3c87%3A0x946bbdb45c522eaf!2sSS%20Kovil%20Rd%2C%20Thiruvananthapuram%2C%20Kerala%2C%20India!5e0!3m2!1sen!2sca!4v1724993829145!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <section class="section background-dark">
           <div class="s-12 m-12 l-4 center">
             <h3 class="text-size-30 margin-bottom-40 text-center"><b>Contact Form</b></h3>
@@ -212,7 +212,7 @@
             <div class="s-12 m-6 l-3 xl-3">
                <h4 class="text-white text-strong margin-m-top-30">Contact Us</h4>
                 <p><i class="icon-sli-screen-smartphone text-primary"></i> </p>
-                <a class="text-primary-hover" href="mailto:info@definitionit.com"><i class="icon-sli-mouse text-primary"></i> info@definitionit.com</a><br>
+                <a class="text-primary-hover" href="mailto:info@definitionit.com"><i class="icon-sli-mouse text-primary"></i> info@technocareinnovations.in</a><br>
                <!-- <a class="text-primary-hover" href="mailto:office@sampledomain.com"><i class="icon-sli-mouse text-primary"></i> office@sampledomain.com</a> -->
             </div>
           </div>  
@@ -227,7 +227,7 @@
       <section class="padding-2x background-dark full-width">
         <div class="line">
           <div class="s-12 l-6">
-            <p class="text-size-12">Copyright 2022, DefinitionIT</p>
+            <p class="text-size-12">Copyright 2022, Techno Care Innovations</p>
            <!-- <p class="text-size-12">All images have been purchased from Bigstock. Do not use the images in your website.</p> -->
           </div>
           <div class="s-12 l-6">
