--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@
                   </div>
                 </div>
                 
-                <div class="l-12 xl-6">
+            <!-    <div class="l-12 xl-6">
                   <div class="float-left">
                     <i class="icon-sli-paper-plane text-primary text-size-40 text-line-height-1"></i>
                   </div>
@@ -144,7 +144,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="m-12 l-6">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2790.3080209505324!2d76.94914243305355!3d8.490489443716454!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05bba5681f3c87%3A0x946bbdb45c522eaf!2sSS%20Kovil%20Rd%2C%20Thiruvananthapuram%2C%20Kerala%2C%20India!5e0!3m2!1sen!2sca!4v1724993829145!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <section class="section background-dark">
