--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
                   </div>
                   <div class="margin-left-60">
                     <h2 class="text-size-20 margin-bottom-10 text-strong">E-mail</h2>                
-                    <p><a class="text-primary-hover" href="mailto:info@definitionit.com">info@definitionit.com</a></p>
+                    <p><a class="text-primary-hover" href="mailto:info@definitionit.com">info@technocareinnovations.in</a></p>
                     <!-- <p><a class="text-primary-hover" href="mailto:office@sampledomain.com">office@sampledomain.com</a></p>  -->             
                   </div>
                 </div>
