--- a/contact.html
+++ b/contact.html
@@ -132,10 +132,10 @@
                   </div>
                 </div>
                 
-               <div class="l-12 xl-6">
+             <!--  <div class="l-12 xl-6">
                   <div class="float-left">
                     <i class="icon-sli-paper-plane text-primary text-size-40 text-line-height-1"></i>
-                  </div>
+                  </div> -->
                   <div class="margin-left-60">
                     <h2 class="text-size-20 margin-bottom-10 text-strong"></h2>
                      <p></p>
