--- a/contact.html
+++ b/contact.html
@@ -212,7 +212,7 @@
             <div class="s-12 m-6 l-3 xl-3">
                <h4 class="text-white text-strong margin-m-top-30">Contact Us</h4>
                 <p><i class="icon-sli-screen-smartphone text-primary"></i> </p>
-                <a class="text-primary-hover" href="mailto:info@definitionit.com"><i class="icon-sli-mouse text-primary"></i> info@technocareinnovations.in</a><br>
+                <a class="text-primary-hover" href="mailto:info@definitionit.com"><i class="icon-sli-mouse text-primary"></i> info@technocareinnovations.com</a><br>
                <!-- <a class="text-primary-hover" href="mailto:office@sampledomain.com"><i class="icon-sli-mouse text-primary"></i> office@sampledomain.com</a> -->
             </div>
           </div>  
